--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
             "email": "svanvreckem@helb-prigogine.be"
         }
     ],
+    "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
             "Svv\\": "src"
